# gsd-skill-creator

./: .continue-here.md  .discovery-state.json  .editorconfig  .gitattributes  .gitignore  .mcp.json  .npmrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ERDOS-TRACKER.md  INSTALL.md  INVENTORY-MANIFEST.json  LICENSE  Makefile  README-integration.md  README.md  SECURITY.md  STANDING-RULES.md  adaptive_cadence.py  bootstrap.sh  build_graph.py  discovery_engine.py  drift_detector.py  embed_concepts.py  embed_corpus.py  embed_incremental.py  eslint.config.mjs  extract_concepts.py  intent_router.py  knip.ts  package-lock.json  package.json  release-history.config.json  release-history.local.json.example  scan_channels.sh  search_corpus.py  serve-dashboard.mjs  sweep-full.sh  sweep.py  (+8 more)
.claude/: settings.json
.college/: CONCEPT-AUTHORING.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.33-MILESTONE-AUDIT.md
artifacts/: channel_scan_results.txt  yt-queue-01-summary.md  yt-queue-02-summary.md  yt-queue-03-summary.md  yt-queue-04-summary.md  yt-queue-05-summary.md  yt-queue-06-summary.md  yt-queue-07-summary.md  yt-queue-08-seg1-summary.md  yt-queue-08-seg2-summary.md  yt-queue-08-seg3-summary.md  yt-queue-08-seg4-summary.md  yt-queue-08-seg5-summary.md  yt-queue-08-seg6-summary.md  yt-queue-08-seg7-summary.md  yt-queue-09-summary.md  yt-queue-10-summary.md  yt-queue-11-summary.md  yt-queue-20-28-batch-summary.md  yt-queue-25-27-32-summary.md  yt-queue-30-summary.md  yt-queue-31-summary.md  yt-queue-34-summary.md  yt-queue-36-summary.md  yt-queue-37-summary.md  yt-queue-38-summary.md
bee-pollinator-mission/: mission.aux  mission.tex  mission.toc
benchmarks/: longmemeval_grove.py  longmemeval_hybrid.py  longmemeval_preindex.py
contrib/: README.md
dashboard/: .dashboard-manifest.json  adoption.html  atlas.html  console.html  index.html  intelligence.html  milestones.html  requirements.html  roadmap.html  state.html
data/: domain-index.json
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.pkgconfig/: librsvg-2.0.pc
src-tauri/benches/: arena_bench.rs
src-tauri/capabilities/: default.json  restricted.json  scribe-dashboard.json
src-tauri/examples/: arena_bench.rs
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: agent_create.toml  agent_destroy.toml  agent_verify_isolation.toml  arena_alloc.toml  arena_checkpoint.toml  arena_free.toml  arena_get.toml  arena_init.toml  arena_list_ids.toml  arena_set_alloc.toml  arena_set_flush.toml  arena_set_free.toml  arena_set_gc.toml  arena_set_get_hot.toml  arena_set_init.toml  arena_set_list_ids.toml  arena_set_sweep.toml  arena_stats.toml  arena_touch.toml  atlas_find_symbols_by_qualified_name.toml  atlas_get_symbol.toml  atlas_invalidate_cache.toml  atlas_list_callees.toml  atlas_list_callers.toml  atlas_list_files_changed_by_mission.toml  atlas_list_missions_for_file.toml  atlas_list_provenance_for_line.toml  atlas_list_references_for_symbol.toml  atlas_list_symbols_for_file.toml  atlas_list_symbols_in_snapshot.toml  atlas_list_type_relations_from.toml  atlas_list_type_relations_to.toml  atlas_request_index_snapshot.toml  claude_list.toml  claude_start.toml  claude_status.toml  claude_stop.toml  echo_channel.toml  echo_event.toml  generate_dashboard.toml  (+51 more)
src-tauri/src/: error.rs  lib.rs  main.rs  pcg.rs  scribe_dashboard.rs  state.rs  watcher.rs  xdg.rs
src-tauri/src/api/: client.rs  history.rs  keystore.rs  mod.rs  retry.rs  streaming.rs
src-tauri/src/api/tests/: client_tests.rs  history_tests.rs  keystore_tests.rs  mod.rs  resilience_tests.rs  retry_tests.rs  streaming_tests.rs
src-tauri/src/claude/: mod.rs  monitor.rs  session.rs
src-tauri/src/commands/: benchmark.rs  claude.rs  dashboard.rs  echo.rs  greet.rs  ipc.rs  keystore.rs  magic.rs  memory_arena.rs  mod.rs  proxy.rs  pty.rs  sandbox.rs  security.rs  security_init.rs  services.rs  staging.rs  tmux.rs  watcher.rs
src-tauri/src/intelligence/: atlas.rs  atlas_sidecar.rs  mod.rs  real_kb.rs  server.rs  types.rs  watchers.rs
src-tauri/src/ipc/: events.rs  mod.rs  types.rs
src-tauri/src/ipc/tests/: mod.rs  type_parity_tests.rs
src-tauri/src/magic/: filter.rs  mod.rs  persistence.rs  types.rs
src-tauri/src/magic/tests/: filter_tests.rs  mod.rs  persistence_tests.rs
src-tauri/src/mcp_host/: commands.rs  connection.rs  manager.rs  mod.rs  registry.rs  router.rs  security.rs  trace.rs  types.rs
src-tauri/src/memory_arena/: README.md  allocator.rs  arena.rs  cgroup.rs  chunk.rs  error.rs  handle.rs  list.rs  mod.rs  persistence.rs  pg_cold.rs  pool.rs  tests.rs  types.rs  vram.rs  warm_start.rs
src-tauri/src/pty/: flow.rs  manager.rs  mod.rs  session.rs
src-tauri/src/security/: agent_isolation.rs  encryption.rs  keyring_backend.rs  keystore.rs  migration.rs  mod.rs  panic_hook.rs  process_context.rs  proxy.rs  proxy_server.rs  sandbox.rs  types.rs
src-tauri/src/security/tests/: encryption_tests.rs  keyring_backend_tests.rs  keystore_reachability.rs  legacy_keystore_feature_removed.rs  migration_tests.rs  mod.rs  process_context_tests.rs  proxy_core_tests.rs  proxy_forward_tests.rs  proxy_server_tests.rs  socket_roundtrip_tests.rs
src-tauri/src/services/: health.rs  launcher.rs  led.rs  mod.rs  registry.rs  shutdown.rs  types.rs
src-tauri/src/services/tests/: health_tests.rs  launcher_tests.rs  led_tests.rs  mod.rs  registry_tests.rs  shutdown_tests.rs
src-tauri/src/staging/: debrief.rs  hygiene.rs  intake.rs  mod.rs  notify.rs  pipeline.rs  security_scanner.rs
src-tauri/src/staging/tests/: debrief_tests.rs  hygiene_tests.rs  intake_tests.rs  mod.rs  notify_tests.rs
src-tauri/src/tmux/: detector.rs  session.rs
src-tauri/tests/: agent_isolation_test.rs  scribe_dashboard_test.rs  security_types_test.rs
(+26675 files in other folders)
