[package]
name = "gsd-os"
version = "1.49.21"
edition = "2021"
description = "GSD-OS Desktop Application"

[lib]
name = "gsd_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.10", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
notify = { version = "8.2", default-features = false }
notify-debouncer-full = { version = "0.7", default-features = false }
portable-pty = "0.9"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time", "process", "io-util", "net"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
gnome-keyring = []
macos-keychain = []

[dev-dependencies]
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
opt-level = 0
