[package]
name = "gsd-os"
version = "1.49.587"
edition = "2021"
description = "GSD-OS Desktop Application"

[lib]
name = "gsd_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.10", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
notify = { version = "8.2", default-features = false }
notify-debouncer-full = { version = "0.7", default-features = false }
portable-pty = "0.9"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time", "process", "io-util", "net"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
libc = "0.2"
memmap2 = "0.9"
cudarc = { version = "0.19", default-features = false, features = ["driver", "std", "nvrtc", "fallback-dynamic-loading", "cuda-version-from-build-system"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }

[features]
gnome-keyring = []
macos-keychain = []
cuda = ["dep:cudarc"]
postgres = ["dep:sqlx"]

[dev-dependencies]
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[[bench]]
name = "arena_bench"
harness = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
opt-level = 0
