[package]
name = "gsd-os"
version = "1.49.905"
edition = "2021"
description = "GSD-OS Desktop Application"

[lib]
name = "gsd_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.10", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
notify = { version = "8.2", default-features = false }
notify-debouncer-full = { version = "0.7", default-features = false }
portable-pty = "0.9"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time", "process", "io-util", "net"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.8"
base64 = "0.22"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "apple-native", "windows-native", "crypto-rust"] }
age = "0.10"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
libc = "0.2"
memmap2 = "0.9"
cudarc = { version = "0.19", default-features = false, features = ["driver", "std", "nvrtc", "fallback-dynamic-loading", "cuda-version-from-build-system"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }
# Phase 825 / KbDelegate seam swap (D-25-08): bundled SQLite for the real KB read path.
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
gnome-keyring = []
macos-keychain = []
cuda = ["dep:cudarc"]
postgres = ["dep:sqlx"]
# `legacy-plaintext-keystore` was retired at v1.49.637 cluster #4 (C1).
# Substrate enumerated 20 references / 3 cfg-blocks; all removed.

[dev-dependencies]
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[[bench]]
name = "arena_bench"
harness = false

# Standalone keystore CLI binary (operator-pinned hybrid CLI arch 2026-05-11).
# `cargo build --release` produces `target/release/skill-creator-keystore`
# alongside the main Tauri app. Both surfaces share the Rust keystore lib
# under src/security/.
[[bin]]
name = "skill-creator-keystore"
path = "bin/skill-creator-keystore.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
opt-level = 0
